# essay_writer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
.githooks/: pre-push
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md
.github/instructions/: documentation-sync.instructions.md  (+3 more)
alembic/: env.py
config/: __init__.py  default.yaml  gemini_pricing.json  schemas.py  settings.py
docs/: DEEPAGENTS_REFERENCE.md  DESIGN.md  IMPLEMENTATION_TRACKER.md  TECHNICAL_DESIGN.md  code-review-2026-04.md
scripts/: db_upgrade_local.py  run_e2e.sh  start_web_and_worker.sh  start_workers.sh  test_providers.py  test_r2_connection.py
src/: agent.py  analysis.py  db_upgrade.py  intake.py  job_store.py  pipeline.py  pipeline_sources.py  pipeline_support.py  pipeline_writing.py  rendering.py  run_history_store.py  run_logging.py  runner.py  runtime.py  schemas.py  scratch_dir.py  start_web_and_workers.py  start_workers.py  storage.py  subagents.py  web.py  web_jobs.py  worker.py  writer_store.py
tests/: conftest.py  test_agent.py  test_author_names.py  test_checkpoint.py  test_crossref_search.py  test_db_upgrade.py  test_docx_builder.py  test_essay_sanitize.py  test_http.py  test_intake.py  test_openalex_search.py  test_optional_pdf_prompt.py  test_pipeline_e2e.py  test_pipeline_support.py  test_progress.py  test_refactoring.py  test_registry_merge.py  test_rendering.py  test_research_sources.py  test_run_history_store.py  test_runtime.py  test_runtime_report.py  test_section_numbering.py  test_settings.py  test_two_phase_sources.py  test_web.py  test_web_fetcher.py  test_web_history.py  test_word_target_normalization.py  test_worker.py  test_writer_auth.py  test_writer_store.py
(+79 files in other folders)
