[project]
name = "essay-writer"
version = "0.1.0"
description = "Deep agent system for writing academic essays in Greek"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.1",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "pymupdf>=1.25",
    "python-pptx>=1.0.2",
    "pydantic-settings[yaml]>=2.13.1",
    "langchain-openai>=1.1.11",
    "httpx>=0.27",
    "python-dotenv>=1.1",
    "ruff>=0.15.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
