[project]
name = "essay-writer"
version = "0.1.0"
description = "Deterministic Python pipeline for academic essay writing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60",
    "instructor>=1.7",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "pymupdf>=1.25",
    "python-pptx>=1.0.2",
    "pydantic-settings[yaml]>=2.13.1",
    "httpx>=0.27",
    "python-dotenv>=1.1",
    "ruff>=0.15.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "genai-prices>=0.0.56",
    "jsonref>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
